--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
 <div class="container">
   <%= render "layouts/header1" %>
-  <%= flash.each do |key, value| %>
+  <% flash.each do |key, value| -%>
     <div class="alert alert-<%= key %><%= value %></div>
   <% end %>
   <%= yield %>
